crates/oxide-agent-core/tests/snapshots/modular_registry_snapshots__modular_registry_snapshot@profile-search-only.snap
---
source: crates/oxide-agent-core/tests/modular_registry_snapshots.rs
expression: "serde_json::to_string_pretty(&snapshot).expect(\"snapshot should serialize\")"
---
{
  "profile": "profile-search-only",
  "compiled_manifest": {
    "capabilities": [
      {
        "id": "llm-provider/opencode-go",
        "module": "llm-provider/opencode-go"
      },
      {
        "id": "llm-provider/opencode-zen",
        "module": "llm-provider/opencode-zen"
      },
      {
        "id": "storage/r2",
        "module": "storage/r2"
      },
      {
        "id": "storage/sqlx",
        "module": "storage/sqlx"
      },
      {
        "id": "tool/brave-search",
        "module": "tool/brave-search"
      },
      {
        "id": "tool/duckduckgo-news",
        "module": "tool/duckduckgo"
      },
      {
        "id": "tool/duckduckgo-search",
        "module": "tool/duckduckgo"
      },
      {
        "id": "tool/searxng-search",
        "module": "tool/searxng"
      },
      {
        "id": "tool/tavily-extract",
        "module": "tool/tavily"
      },
      {
        "id": "tool/tavily-search",
        "module": "tool/tavily"
      },
      {
        "id": "tool/webfetch-md",
        "module": "tool/webfetch-md"
      },
      {
        "id": "transport/telegram",
        "module": "transport/telegram"
      }
    ],
    "modules": [
      {
        "cargo_feature": "llm-opencode-go",
        "config_properties": [
          {
            "default_value": "https://opencode.ai/zen/go/v1/chat/completions",
            "description": "OpenCode Go Chat Completions endpoint.",
            "env": "OPENCODE_GO_API_BASE",
            "name": "api_base",
            "secret": false,
            "value_kind": "string"
          },
          {
            "default_value": null,
            "description": "OpenCode Go API key. Also accepts OPENCODE_ZEN_API_KEY and legacy OPENCODE_GO_API_KEY.",
            "env": "OPENCODE_API_KEY",
            "name": "api_key",
            "secret": true,
            "value_kind": "string"
          },
          {
            "default_value": "https://opencode.ai/zen/go/v1/messages",
            "description": "OpenCode Go Anthropic Messages endpoint.",
            "env": "OPENCODE_GO_MESSAGES_API_BASE",
            "name": "messages_api_base",
            "secret": false,
            "value_kind": "string"
          },
          {
            "default_value": "1800",
            "description": "OpenCode Go model discovery cache TTL.",
            "env": "OPENCODE_GO_MODEL_CACHE_TTL_SECS",
            "name": "model_cache_ttl_secs",
            "secret": false,
            "value_kind": "string"
          },
          {
            "default_value": "https://opencode.ai/zen/go/v1/models",
            "description": "OpenCode Go model discovery endpoint.",
            "env": "OPENCODE_GO_MODELS_URL",
            "name": "models_url",
            "secret": false,
            "value_kind": "string"
          }
        ],
        "conflicts": [],
        "id": "llm-provider/opencode-go",
        "kind": "llm-provider",
        "provides": [
          "llm-provider/opencode-go"
        ],
        "requires": []
      },
      {
        "cargo_feature": "llm-opencode-go",
        "config_properties": [
          {
            "default_value": "https://opencode.ai/zen/v1/chat/completions",
            "description": "OpenCode Zen Chat Completions endpoint.",
            "env": "OPENCODE_ZEN_API_BASE",
            "name": "api_base",
            "secret": false,
            "value_kind": "string"
          },
          {
            "default_value": null,
            "description": "OpenCode Zen API key. Also accepts OPENCODE_API_KEY and OPENCODE_GO_API_KEY.",
            "env": "OPENCODE_ZEN_API_KEY",
            "name": "api_key",
            "secret": true,
            "value_kind": "string"
          },
          {
            "default_value": "https://opencode.ai/zen/v1/messages",
            "description": "OpenCode Zen Anthropic Messages endpoint.",
            "env": "OPENCODE_ZEN_MESSAGES_API_BASE",
            "name": "messages_api_base",
            "secret": false,
            "value_kind": "string"
          },
          {
            "default_value": "1800",
            "description": "OpenCode Zen model discovery cache TTL.",
            "env": "OPENCODE_ZEN_MODEL_CACHE_TTL_SECS",
            "name": "model_cache_ttl_secs",
            "secret": false,
            "value_kind": "string"
          },
          {
            "default_value": "https://opencode.ai/zen/v1/models",
            "description": "OpenCode Zen free model discovery endpoint.",
            "env": "OPENCODE_ZEN_MODELS_URL",
            "name": "models_url",
            "secret": false,
            "value_kind": "string"
          }
        ],
        "conflicts": [],
        "id": "llm-provider/opencode-zen",
        "kind": "llm-provider",
        "provides": [
          "llm-provider/opencode-zen"
        ],
        "requires": []
      },
      {
        "cargo_feature": "storage-s3-r2",
        "config_properties": [],
        "conflicts": [],
        "id": "storage/r2",
        "kind": "storage-backend",
        "provides": [
          "storage/r2"
        ],
        "requires": []
      },
      {
        "cargo_feature": "storage-sqlx",
        "config_properties": [
          {
            "default_value": "10",
            "description": "Postgres pool connection/acquire timeout in seconds.",
            "env": "OXIDE_DATABASE_CONNECT_TIMEOUT_SECS",
            "name": "connect_timeout_secs",
            "secret": false,
            "value_kind": "string"
          },
          {
            "default_value": null,
            "description": "Postgres connection URL. Also accepts DATABASE_URL as a runtime fallback.",
            "env": "OXIDE_DATABASE_URL",
            "name": "database_url",
            "secret": true,
            "value_kind": "string"
          },
          {
            "default_value": "5",
            "description": "Maximum Postgres pool connections.",
            "env": "OXIDE_DATABASE_MAX_CONNECTIONS",
            "name": "max_connections",
            "secret": false,
            "value_kind": "string"
          },
          {
            "default_value": "false",
            "description": "Run SQLx migrations during storage startup when set to true.",
            "env": "OXIDE_DATABASE_MIGRATE_ON_STARTUP",
            "name": "migrate_on_startup",
            "secret": false,
            "value_kind": "string"
          },
          {
            "default_value": "migrations",
            "description": "Runtime path to SQLx migration files.",
            "env": "OXIDE_DATABASE_MIGRATIONS_DIR",
            "name": "migrations_dir",
            "secret": false,
            "value_kind": "string"
          }
        ],
        "conflicts": [],
        "id": "storage/sqlx",
        "kind": "storage-backend",
        "provides": [
          "storage/sqlx"
        ],
        "requires": []
      },
      {
        "cargo_feature": "tool-brave-search",
        "config_properties": [],
        "conflicts": [],
        "id": "tool/brave-search",
        "kind": "search",
        "provides": [
          "tool/brave-search"
        ],
        "requires": []
      },
      {
        "cargo_feature": "tool-duckduckgo",
        "config_properties": [],
        "conflicts": [],
        "id": "tool/duckduckgo",
        "kind": "search",
        "provides": [
          "tool/duckduckgo-news",
          "tool/duckduckgo-search"
        ],
        "requires": []
      },
      {
        "cargo_feature": "tool-searxng",
        "config_properties": [],
        "conflicts": [],
        "id": "tool/searxng",
        "kind": "search",
        "provides": [
          "tool/searxng-search"
        ],
        "requires": []
      },
      {
        "cargo_feature": "tool-tavily",
        "config_properties": [],
        "conflicts": [],
        "id": "tool/tavily",
        "kind": "search",
        "provides": [
          "tool/tavily-extract",
          "tool/tavily-search"
        ],
        "requires": []
      },
      {
        "cargo_feature": "tool-webfetch-md",
        "config_properties": [],
        "conflicts": [],
        "id": "tool/webfetch-md",
        "kind": "search",
        "provides": [
          "tool/webfetch-md"
        ],
        "requires": []
      },
      {
        "cargo_feature": "transport-telegram",
        "config_properties": [],
        "conflicts": [],
        "id": "transport/telegram",
        "kind": "transport",
        "provides": [
          "transport/telegram"
        ],
        "requires": []
      }
    ]
  },
  "enabled_manifest_default_config": {
    "capabilities": [
      "llm-provider/opencode-go",
      "llm-provider/opencode-zen",
      "storage/r2",
      "storage/sqlx",
      "tool/brave-search",
      "tool/duckduckgo-news",
      "tool/duckduckgo-search",
      "tool/searxng-search",
      "tool/tavily-extract",
      "tool/tavily-search",
      "tool/webfetch-md",
      "transport/telegram"
    ],
    "modules": [
      "llm-provider/opencode-go",
      "llm-provider/opencode-zen",
      "storage/r2",
      "storage/sqlx",
      "tool/brave-search",
      "tool/duckduckgo",
      "tool/searxng",
      "tool/tavily",
      "tool/webfetch-md",
      "transport/telegram"
    ]
  },
  "registered_tool_names_default_config": [
    "duckduckgo_news",
    "duckduckgo_search",
    "web_markdown"
  ],
  "registered_llm_provider_ids_dummy_config": [
    "llm-provider/opencode-go",
    "llm-provider/opencode-zen"
  ],
  "registered_llm_provider_aliases_dummy_config": [
    "opencode-go",
    "opencode-zen",
    "opencode_go",
    "opencode_zen"
  ],
  "storage_backend_module_ids": [
    "storage/r2",
    "storage/sqlx"
  ],
  "sandbox_backend_module_ids": [],
  "external_service_requirements": [
    {
      "module_id": "llm-provider/opencode-go",
      "kind": "llm-provider",
      "cargo_feature": "llm-opencode-go",
      "config_env": [
        "OPENCODE_GO_API_BASE",
        "OPENCODE_API_KEY",
        "OPENCODE_GO_MESSAGES_API_BASE",
        "OPENCODE_GO_MODEL_CACHE_TTL_SECS",
        "OPENCODE_GO_MODELS_URL"
      ],
      "requires_capabilities": []
    },
    {
      "module_id": "llm-provider/opencode-zen",
      "kind": "llm-provider",
      "cargo_feature": "llm-opencode-go",
      "config_env": [
        "OPENCODE_ZEN_API_BASE",
        "OPENCODE_ZEN_API_KEY",
        "OPENCODE_ZEN_MESSAGES_API_BASE",
        "OPENCODE_ZEN_MODEL_CACHE_TTL_SECS",
        "OPENCODE_ZEN_MODELS_URL"
      ],
      "requires_capabilities": []
    },
    {
      "module_id": "storage/r2",
      "kind": "storage-backend",
      "cargo_feature": "storage-s3-r2",
      "config_env": [],
      "requires_capabilities": []
    },
    {
      "module_id": "storage/sqlx",
      "kind": "storage-backend",
      "cargo_feature": "storage-sqlx",
      "config_env": [
        "OXIDE_DATABASE_CONNECT_TIMEOUT_SECS",
        "OXIDE_DATABASE_URL",
        "OXIDE_DATABASE_MAX_CONNECTIONS",
        "OXIDE_DATABASE_MIGRATE_ON_STARTUP",
        "OXIDE_DATABASE_MIGRATIONS_DIR"
      ],
      "requires_capabilities": []
    },
    {
      "module_id": "tool/brave-search",
      "kind": "search",
      "cargo_feature": "tool-brave-search",
      "config_env": [],
      "requires_capabilities": []
    },
    {
      "module_id": "tool/duckduckgo",
      "kind": "search",
      "cargo_feature": "tool-duckduckgo",
      "config_env": [],
      "requires_capabilities": []
    },
    {
      "module_id": "tool/searxng",
      "kind": "search",
      "cargo_feature": "tool-searxng",
      "config_env": [],
      "requires_capabilities": []
    },
    {
      "module_id": "tool/tavily",
      "kind": "search",
      "cargo_feature": "tool-tavily",
      "config_env": [],
      "requires_capabilities": []
    },
    {
      "module_id": "tool/webfetch-md",
      "kind": "search",
      "cargo_feature": "tool-webfetch-md",
      "config_env": [],
      "requires_capabilities": []
    }
  ]
}
